# ansr

./: README.md  ansr.py  pyproject.toml
examples/: benchmark.py  plot_functions.py  shubert.py  torch_regression.py  torch_transformer.py
src/ansr/: ansr.py  ansr_torch.py  callbacks.py
tests/: basic_functions_test.py
tests/ansr/: basic_functions_test.py  callbacks_test.py  torch_test.py  vectorized_test.py
