[project]
name = "ansr"
version = "0.5.0"
description = "Across Neighbourhood Search with Restarts (ANSR)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
torch = ["torch>=2.0"]
tests = ["pytest>=8.4.0"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
]
